erDiagram
    CONSORCIO ||--o{ UNIDAD_FUNCIONAL : "tiene"
    CONSORCIO ||--o{ EXPENSA : "genera"
    CONSORCIO ||--o{ CUENTA_BANCARIA : "posee"
    CONSORCIO ||--o{ GASTO : "registra"
    
    UNIDAD_FUNCIONAL ||--o{ COCHERA : "tiene"
    UNIDAD_FUNCIONAL ||--o{ BAULERA : "tiene"
    UNIDAD_FUNCIONAL ||--o| PROPIETARIO : "pertenece_a"
    UNIDAD_FUNCIONAL ||--o| INQUILINO : "ocupada_por"
    UNIDAD_FUNCIONAL ||--o{ DETALLE_EXPENSA : "tiene"
    UNIDAD_FUNCIONAL ||--o{ PAGO : "realiza"
    UNIDAD_FUNCIONAL ||--o{ CUENTA_PAGO : "usa"
    
    PERSONA ||--o{ PROPIETARIO : "es"
    PERSONA ||--o{ INQUILINO : "es"
    
    EXPENSA ||--o{ DETALLE_EXPENSA : "contiene"
    EXPENSA ||--o{ GASTO_ORDINARIO_EXPENSA : "incluye"
    EXPENSA ||--o{ GASTO_EXTRAORDINARIO_EXPENSA : "incluye"
    EXPENSA ||--|| ESTADO_FINANCIERO : "tiene"
    
    GASTO ||--o{ GASTO_ORDINARIO_EXPENSA : "se_prorratea_en"
    GASTO ||--o{ GASTO_EXTRAORDINARIO_EXPENSA : "se_prorratea_en"
    GASTO }o--|| TIPO_GASTO : "clasifica"
    GASTO }o--o| PROVEEDOR : "facturado_por"
    
    PAGO }o--|| UNIDAD_FUNCIONAL : "asociado_a"
    PAGO }o--o| CUENTA_PAGO : "desde"
    
    CUENTA_BANCARIA ||--o{ RESUMEN_BANCARIO : "tiene"
    RESUMEN_BANCARIO ||--o{ MOVIMIENTO_BANCARIO : "contiene"
    MOVIMIENTO_BANCARIO }o--o| PAGO : "genera"

    CONSORCIO {
        int id_consorcio PK
        string nombre
        string cuit
        string direccion
        string localidad
        string provincia
        int superficie_total_m2
        date fecha_alta
        date fecha_baja
    }
    
    CUENTA_BANCARIA {
        int id_cuenta PK
        int id_consorcio FK
        string banco
        string tipo_cuenta
        string cbu
        string alias
        date fecha_apertura
        date fecha_cierre
    }
    
    UNIDAD_FUNCIONAL {
        int id_uf PK
        int id_consorcio FK
        string numero_uf
        string piso
        string departamento
        decimal superficie_m2
        decimal porcentaje_participacion
        int id_propietario FK
        int id_inquilino FK
        date fecha_baja
    }
    
    COCHERA {
        int id_cochera PK
        int id_uf FK
        string numero
        decimal superficie_m2
        decimal porcentaje_participacion
    }
    
    BAULERA {
        int id_baulera PK
        int id_uf FK
        string numero
        decimal superficie_m2
        decimal porcentaje_participacion
    }
    
    PERSONA {
        int id_persona PK
        string dni
        string nombre
        string apellido
        string email
        string telefono
        string whatsapp
        string direccion
        date fecha_alta
    }
    
    PROPIETARIO {
        int id_propietario PK
        int id_persona FK
        date fecha_desde
        date fecha_hasta
    }
    
    INQUILINO {
        int id_inquilino PK
        int id_persona FK
        date fecha_desde
        date fecha_hasta
    }
    
    CUENTA_PAGO {
        int id_cuenta_pago PK
        int id_uf FK
        string cbu_cvu
        string alias
        date fecha_alta
        date fecha_baja
    }
    
    EXPENSA {
        int id_expensa PK
        int id_consorcio FK
        int mes
        int anio
        date fecha_emision
        date fecha_vto_1
        date fecha_vto_2
        decimal interes_mora_1
        decimal interes_mora_2
        decimal total_gastos_ordinarios
        decimal total_gastos_extraordinarios
        char estado
        date fecha_envio
    }
    
    DETALLE_EXPENSA {
        int id_detalle PK
        int id_expensa FK
        int id_uf FK
        decimal saldo_anterior
        decimal pagos_recibidos
        decimal deuda
        decimal interes_mora
        decimal expensas_ordinarias
        decimal expensas_extraordinarias
        decimal adicional_cochera
        decimal adicional_baulera
        decimal total_a_pagar
        char forma_envio
        date fecha_envio
    }
    
    ESTADO_FINANCIERO {
        int id_estado_financiero PK
        int id_expensa FK
        decimal saldo_anterior
        decimal ingresos_en_termino
        decimal ingresos_adeudados
        decimal ingresos_adelantados
        decimal egresos_mes
        decimal saldo_cierre
    }
    
    TIPO_GASTO {
        int id_tipo_gasto PK
        string codigo
        string descripcion
        string categoria
        char tipo
    }
    
    PROVEEDOR {
        int id_proveedor PK
        string razon_social
        string cuit
        string tipo_proveedor
        string email
        string telefono
        string direccion
        date fecha_baja
    }
    
    GASTO {
        int id_gasto PK
        int id_consorcio FK
        int id_tipo_gasto FK
        int id_proveedor FK
        date fecha_gasto
        int mes
        int anio
        string numero_factura
        string descripcion
        decimal importe
        int cuota_numero
        int cuota_total
        char estado
    }
    
    GASTO_ORDINARIO_EXPENSA {
        int id_gasto_ordinario PK
        int id_expensa FK
        int id_gasto FK
        decimal importe_prorrateado
    }
    
    GASTO_EXTRAORDINARIO_EXPENSA {
        int id_gasto_extraordinario PK
        int id_expensa FK
        int id_gasto FK
        decimal importe_prorrateado
        string descripcion_obra
    }
    
    PAGO {
        int id_pago PK
        int id_uf FK
        int id_cuenta_pago FK
        date fecha_pago
        decimal monto
        char tipo_pago
        int id_expensa FK
        char estado
    }
    
    RESUMEN_BANCARIO {
        int id_resumen PK
        int id_cuenta FK
        date fecha_importacion
        date fecha_corte
        string archivo_origen
    }
    
    MOVIMIENTO_BANCARIO {
        int id_movimiento PK
        int id_resumen FK
        date fecha
        string cbu_cvu_origen
        decimal importe
        string concepto
        int id_pago FK
    }
